# desc-cosmology-env

./: Dockerfile  Dockerfile-slac  README.md
conda/: .build-all-fc1.11.sh.swp  build-all-fc1.11.sh  build-nersc.sh  condapack.txt  desc-cosmology-lock.yml  docker-install.sh  install-from-lock.sh  install-mpich.sh  pippack.txt  sitecustomize.py  update_package_setup.sh
conda/lock/: environment-slac.yml  environment.yml  pyproject.toml
conda/lock/auto/: desc-cosmology-lock-20260313.yml  desc-cosmology-lock-main-2026-03-13.yml  desc-cosmology-lock-main-2026-03-26.yml  desc-cosmology-lock-main-2026-03-27.yml  desc-cosmology-lock-main-2026-04-01.yml  desc-cosmology-lock-main-2026-04-09.yml  desc-cosmology-lock-main-2026-04-10.yml  desc-cosmology-lock-main-2026-05-01.yml  desc-cosmology-lock-main-2026-05-21.yml  desc-cosmology-lock-main-2026-05-22.yml  desc-cosmology-lock-main-2026-06-01.yml  desc-cosmology-lock-main-2026-06-12.yml  desc-cosmology-lock-main-2026-06-15.yml  desc-cosmology-lock-main-2026-07-01.yml  desc-cosmology-lock-main-2026-07-10.yml  desc-cosmology-lock-main-2026-07-15.yml  desc-cosmology-lock-main-2026-07-22.yml  desc-cosmology-lock-slac-main-2026-06-18.yml  desc-cosmology-lock-slac-main-2026-06-24.yml  desc-cosmology-lock-slac-main-2026-06-25.yml  desc-cosmology-lock-slac-main-2026-07-01.yml  desc-cosmology-lock-slac-main-2026-07-22.yml  desc-cosmology-lock-slac-main-2026-07-23.yml
nersc/: setup-cosmology-dev.sh  setup-cosmology-env.sh  setup-cosmology-int.sh  setup-cosmology-prod.sh  setup_forecasts_dev.sh  setup_forecasts_env.sh  sitecustomize.py  (+1 more)
(+7 files in other folders)
