# pyproject.toml

[project]
name = "poetry-demo"
version = "0.1.0"
description = ""


platforms = [
    'linux-64'
]
[tool.poetry]
packages = [
    { include = "binny" },
]

[tool.poetry.dependencies]
augur = {url = "https://github.com/binny-org/binny/archive/v0.1.0.tar.gz"}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

